feat: 实施阈值回退策略 - 添加保守微调v2脚本，目标胜率≥53% - 调整阈值配置，为后续回退做准备

--- a/configs/thresholds.yaml
+++ b/configs/thresholds.yaml
@@ -3,7 +3,7 @@
 
 gulfport:
   标准阶段:
-    threshold: 0.44  # 从0.46调整到0.44
+    threshold: 0.44  # 保持0.44，等待性能更稳定后再回退
   完整阶段:
     threshold: 0.33  # 从0.35调整到0.33
 
