feat: 统一所有港口样本量上限到800 - 保持一致的统计置信度 - 为后续阈值校准做准备

--- a/scripts/sample_size_config.yaml
+++ b/scripts/sample_size_config.yaml
@@ -8,19 +8,17 @@ ports:
     complete_stage: 1700   # 从400提升到1700 (0.3525 vs 0.37)
   
   new_orleans:
-    advanced_stage: 700    # 从400提升到700 (0.3975 vs 0.40)
+    advanced_stage: 800    # 从700提升到800，保持一致的统计置信度
   
   south_louisiana:
-    advanced_stage: 900    # 从400提升到900 (0.3825 vs 0.39)
+    advanced_stage: 800    # 从900调整到800，保持一致的统计置信度
   
   baton_rouge:
-    intermediate_stage: 1500  # 从400提升到1500 (0.435 vs 0.45)
-    advanced_stage: 1200      # 从400提升到1200 (0.3775 vs 0.39)
+    intermediate_stage: 800  # 从1500调整到800，保持一致的统计置信度
+    advanced_stage: 800      # 从1200调整到800，保持一致的统计置信度
 
 # 计算依据：
 # Gulfport标准: 0.5075胜率，阈值0.49，需要n≈600
 # Gulfport完整: 0.3525胜率，阈值0.37，需要n≈1700  
-# NO高级: 0.3975胜率，阈值0.40，需要n≈700
-# SoLA高级: 0.3825胜率，阈值0.39，需要n≈900
-# BR中级: 0.435胜率，阈值0.45，需要n≈1500
-# BR高级: 0.3775胜率，阈值0.39，需要n≈1200 
+# 统一提升到800样本量，保持一致的统计置信度
+# 各港口阈值和胜率关系保持不变，但统计精度更一致 
